--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,20 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.bg {
+    background: linear-gradient(-70deg, #fa7c30 30%, rgba(0, 0, 0, 0) 30%), 
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+#landing {
+    background: linear-gradient(60deg, #E38F2D 30%, rgba(0,0,0,0) 30%), linear-gradient(30deg, #F4DF9E 60%, #D45D37 30%);
 }
 
-* {
-  box-sizing: border-box;
+#projects {
+    background: linear-gradient(90deg, #99BF72 60%, #00896F 40%);
 }
+
+#contact {
+    background: #E38F2D;
+}
+
